--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,16 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    models:
+      address: 住所
+    attributes:
+      address:
+        postal_code: 郵便番号
+        prefectures: 都道府県
+        city: 市区町村
+        house_number: 番地
+        building: 建物名
+        phone_number: 電話
   date:
     abbr_day_names:
     - 日
