--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -16,7 +16,7 @@ ja:
         city: 市区町村
         house_number: 番地
         building: 建物名
-        phone_number: 電話
+        phone_number: 電話番号
   date:
     abbr_day_names:
     - 日
