--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -21,6 +21,18 @@ ja:
         house_number: 番地
         building: 建物名
         phone_number: 電話番号
+    models:
+      product: 商品
+    attributes:
+      product:
+        name: 商品名
+        description: 商品の説明
+        category: カテゴリー
+        condition: 商品の状態
+        shipping_charges: 配送料の負担
+        shipping_area: 発送元の地域
+        days_to_delivery: 発送までの日数
+        price: 価格
   date:
     abbr_day_names:
     - 日
